--- a/web/accounts.xhtml
+++ b/web/accounts.xhtml
@@ -1,12 +1,34 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Accounts</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <f:view>
+            <h:form>
+                <h:dataTable value="#{AccountBean.accounts}" var="a">
+                    <h:column>
+                        <f:facet name="header">ID</f:facet>
+                        #{a.id}
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">Email</f:facet>
+                        #{a.email}
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">Account type</f:facet>
+                        #{a.accountType}
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">Category for technician</f:facet>
+                        #{a.categoryforTecnician}
+                    </h:column>
+                </h:dataTable>
+            </h:form>
+        </f:view>
     </h:body>
 </html>
 
