--- a/web/createAccount.xhtml
+++ b/web/createAccount.xhtml
@@ -1,12 +1,33 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <h:form>
+            <h:outputLabel>Username:</h:outputLabel>
+            <h:inputText value="#{AccountBean.usename}"></h:inputText>
+            <h:outputLabel>Password:</h:outputLabel>
+            <h:inputText value="#{AccountBean.password}"></h:inputText>
+            <h:outputLabel>Type</h:outputLabel>
+            <h:selectOneMenu>
+                <f:selectItem value="#{AccountBean.accountType = TECHNICIAN}"></f:selectItem>
+                <f:selectItem value="#{AccountBean.accountType = CUSTOMER}"></f:selectItem>
+            </h:selectOneMenu>
+            <h:outputLabel>Category for technician</h:outputLabel>
+            <c:if test="#{AccountBean.accountType == TECHNICIAN}">
+            <h:selectOneMenu>
+                <f:selectItem value="#{AccountBean.technicianCategory = HARDWARE}"></f:selectItem>
+                <f:selectItem value="#{AccountBean.technicianCategory = SOFTWARE}"></f:selectItem>
+                <f:selectItem value="#{AccountBean.technicianCategory = OTHER_PRODUCTS}"></f:selectItem>
+            </h:selectOneMenu>
+            </c:if>
+            <h:commandButton>Save</h:commandButton>
+        </h:form>
     </h:body>
 </html>
 
