--- a/web/dashbord.xhtml
+++ b/web/dashbord.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
@@ -41,10 +42,13 @@
                         </h:column>
                         <h:column>
                             <f:facet name="header">Status</f:facet>
-                            <h:selectOneMenu rendered="#{DashbordBean.privileges != 3}">
-                                <f:selectItem></f:selectItem>
-                            </h:selectOneMenu>
+                            #{t.status}
                         </h:column>
+                        <c:if test="#{DashbordBean.privileges == TECHNICIAN}">
+                        <h:column>
+                            <h:commandButton value="Solve" action=""></h:commandButton>
+                        </h:column>
+                        </c:if>
                     </h:dataTable>
                 </h:form>
             </f:view>
